# ocaml-absint

./: TODO  dune-project
lib/: analyzer.ml  domain.ml  dune  intervals.ml  intervals.mli  language.ml  language.mli  points_to.ml  sem.ml  signs.ml  signs.mli
test/: absint.ml  dune  intervals.ml  signs.ml
